tests/scripts/type_errors/test_declared_twice.roto
test foo {
	accept
}

test foo {
	reject
}
